--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,11 +106,12 @@ button {
 }
 
 .image-p {
-  height: 350px;
+  height: 150px;
   width: 350px;
   max-width: 100%;
-  height: auto;
+  /* height: auto;s */
   margin-bottom: 10px;
+ 
 }
 
 /* index page */
@@ -161,4 +162,11 @@ button {
 .fa-linkedin {
   background: #007bb5;
   color: white;
+}
+
+#email-id,
+#phone
+{
+  color:blue;
+  
 }
